k8sConfig/accountService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-ms-deployment
  labels:
    app: account-ms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account-ms
  template:
    metadata:
      labels:
        app: account-ms
    spec:
      containers:
        - name: account-ms
          image: pyordan/js-account-service:1.0
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: account-ms-service
spec:
  selector:
    app: account-ms
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
