k8sConfig/apiGateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-ms-deployment
  labels:
    app: api-gateway-ms
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-gateway-ms
  template:
    metadata:
      labels:
        app: api-gateway-ms
    spec:
      containers:
        - name: api-gateway-ms
          image: pyordan/js-api-gateway-service:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: http-api-gateway-ms-service
spec:
  selector:
    app: api-gateway-ms
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
