k8sConfig/candidateService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candidates-ms-deployment
  labels:
    app: candidates-ms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: candidates-ms
  template:
    metadata:
      labels:
        app: candidates-ms
    spec:
      containers:
        - name: candidates-ms
          image: pyordan/js-candidates-service:latest
          imagePullPolicy: Always

          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: http-candidates-ms-service
spec:
  selector:
    app: candidates-ms
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
