k8sConfig/emailService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service-ms-deployment
  labels:
    app: email-service-ms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: email-service-ms
  template:
    metadata:
      labels:
        app: email-service-ms
    spec:
      containers:
        - name: email-service-ms
          image: pyordan/js-email-service:1.2
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: email-service-ms-service
spec:
  selector:
    app: email-service-ms
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
