k8sConfig/jobSearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-search-ms-deployment
  labels:
    app: job-search-ms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: job-search-ms
  template:
    metadata:
      labels:
        app: job-search-ms
    spec:
      containers:
        - name: job-search-ms
          image: pyordan/js-job-search-service:2.3
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: job-search-ms-service
spec:
  selector:
    app: job-search-ms
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
