k8sConfig/jobsService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs-ms-deployment
  labels:
    app: jobs-ms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jobs-ms
  template:
    metadata:
      labels:
        app: jobs-ms
    spec:
      containers:
        - name: jobs-ms
          image: pyordan/js-jobs-service:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: http-jobs-ms-service
spec:
  selector:
    app: jobs-ms
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
