k8sConfig/notificationService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-ms-deployment
  labels:
    app: notification-service-ms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service-ms
  template:
    metadata:
      labels:
        app: notification-service-ms
    spec:
      containers:
        - name: notification-service-ms
          image: pyordan/js-notification-service:1.0
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service-ms-service
spec:
  selector:
    app: notification-service-ms
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
