k8sConfig/recruiterSearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recruiter-search-deployment
  labels:
    app: recruiter-search-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recruiter-search-ms
  template:
    metadata:
      labels:
        app: recruiter-search-ms
    spec:
      containers:
        - name: recruiter-search-ms
          image: pyordan/js-recruiter-search-service:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: http-recruiter-search-ms-service
spec:
  selector:
    app: recruiter-search-ms
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
