k8sConfig/ingress-config.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: minimal-ingress 
spec: 
  rules: 
  - http: 
      paths: 
      - path: /* 
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-gateway-ms-service
            port:
              number: 8000
